Modif du README.md modif d'un terme.

--- a/GameData/KSPCorrectionFr/Correction_Fr.cfg
+++ b/GameData/KSPCorrectionFr/Correction_Fr.cfg
@@ -87,7 +87,7 @@
 		#autoLOC_6002405 = Nœud ascendant : <<1>>°
 		#autoLOC_6002406 = Nœud descendant : <<1>>°		
 
-		#autoLOC_7003304 = Masquer face cam		
+		#autoLOC_7003304 = Masquer la facecam		
 
 		#autoLOC_8004212 = [fr]Wheel Brakes
 		#autoLOC_8004213 = Cargo Bay
