--- a/GameData/KSPCorrectionFr/Correction_Fr.cfg
+++ b/GameData/KSPCorrectionFr/Correction_Fr.cfg
@@ -2,6 +2,10 @@
 {
 	fr-fr
 	{
+		#autoLOC_148462 = Séquencement
+		#autoLOC_148465 = Arrimage (Translation)
+		#autoLOC_148468 = Arrimage (Rotation)
+		
 		#autoLOC_213513 = \nDéflexion max. : <<1>>°	
 	
 		#autoLOC_221408 = <b>Amplitude de vectorisation : </b><<1>>°
